<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/entry_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/result_tv"
        android:layout_marginStart="16sp"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="16sp"
        android:layout_marginBottom="16sp"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="32sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/result_tv"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="64sp"
        android:textAlignment="textEnd"
        android:layout_above="@+id/buttons_layout"
        android:layout_margin="16sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/buttons_layout"
        android:layout_alignParentBottom="true"

        android:paddingVertical="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/c"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/btn_C"
                android:backgroundTint="#F44336">

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/OPbrack"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/btn_OPbrac"
                app:backgroundTint="#8E8A8A">

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/CLbrack"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/btn_CLbrac"
                app:backgroundTint="#8E8A8A"
                tools:ignore="HardcodedText">

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/div"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/btn_div"
                app:backgroundTint="#673AB7"
                tools:ignore="HardcodedText">

            </com.google.android.material.button.MaterialButton>




        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/_7"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/btn_7">

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/_8"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/btn_8">

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/_9"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/btn_9">

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/mul"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/btn_mul"
                app:backgroundTint="#673AB7"
                tools:ignore="HardcodedText">

            </com.google.android.material.button.MaterialButton>




        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/_4"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/btn_4">

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/_5"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/btn_5">

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/_6"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/btn_6">

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/add"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/btn_add"
                app:backgroundTint="#673AB7">

            </com.google.android.material.button.MaterialButton>




        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/_1"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/btn_1">

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/_2"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/btn_2">

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/_3"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/btn_3">

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/sub"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/btn_sub"
                app:backgroundTint="#673AB7">

            </com.google.android.material.button.MaterialButton>




        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/ac"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:id="@+id/btn_AC"
                app:backgroundTint="#F44336">

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/_0"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/btn_0">

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/point"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/btn_point">

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/equals"
                android:textSize="32sp"
                android:textColor="@color/white"
                android:id="@+id/btn_equal"
                app:backgroundTint="#673AB7">

            </com.google.android.material.button.MaterialButton>




        </LinearLayout>


    </LinearLayout>


</RelativeLayout>